--- a/src/app/employees/list-employees.component.html
+++ b/src/app/employees/list-employees.component.html
@@ -1,50 +1,58 @@
 <div class="panel panel-primary" *ngFor="let employee of employees">
   <div class="panel-heading">
-    <h3 class="panel-title">{{employees.name}}</h3>
+      <h2 class="panel-title"><strong>{{ employee.name }}</strong></h2>
   </div>
   <div class="panel-body">
-    <div class="col-xs-10">
       <div class="row">
-        <div class="col-xs-4">
-          <img [src]="employee.photoPath"></img>
-        </div>
-        <div class="col-xs-8">
-
-          <div class="row">
-            <div class="col-xs-6">
-              Gender
-            </div>
-            <div class="col-xs-6">
-              : {{employee.name}}
-            </div>
+          <div class="col-md-10">
+              <div class="row vertical-align">
+                  <div class="col-md-4">
+                      <img class="imageClass" [src]="employee.photoPath"  />
+                  </div>
+                  <div class="col-md-8">
+                      <div class="row">
+                          <div class="col-md-6">
+                              Gender
+                          </div>
+                          <div class="col-md-6">
+                              : {{ employee.gender }}
+                          </div>
+                      </div>
+                      <div class="row">
+                          <div class="col-md-6">
+                              E-Mail
+                          </div>
+                          <div class="col-md-6">
+                              : {{ employee.email }}
+                          </div>
+                      </div>
+                      <div class="row">
+                          <div class="col-md-6">
+                              Phone Number
+                          </div>
+                          <div class="col-md-6">
+                              : {{ employee.phoneNumber }}
+                          </div>
+                      </div>
+                      <div class="row">
+                          <div class="col-md-6">
+                              Department
+                          </div>
+                          <div class="col-md-6">
+                              : {{ employee.department }}
+                          </div>
+                      </div>
+                      <div class="row">
+                          <div class="col-md-6">
+                              Date Of Birth
+                          </div>
+                          <div class="col-md-6">
+                              : {{ employee.dateOfBirth | date }}
+                          </div>
+                      </div>
+                  </div>
+              </div>    
           </div>
-
-          <div class="row">
-            <div class="col-xs-6">
-              Gender
-            </div>
-            <div class="col-xs-6">
-              : {{employee.name}}
-            </div>
-          </div>
-
-          <div class="row">
-            <div class="col-xs-6">
-              Gender
-            </div>
-            <div class="col-xs-6">
-              : {{employee.name}}
-            </div>
-          </div>
-
-        </div>
       </div>
-    </div>
   </div>
 </div>
-<!-- <h1 *ngIf="dataFromChild">
-  {{ dataFromChild?.name +' '+dataFromChild?.gender }}
-</h1>
-<div *ngFor="let employee of employees">
-  <app-display-employee [employee]="employee" (notify)="handleNotify($event)"></app-display-employee>
-</div> -->
